<resources>
    <string name="app_name">GravityEngineDemo</string>
    <string name="edit_username">Enter your user name</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_fragment">Fragment and ListView Test</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_setsuperprop">Set Super Properties</string>
    <string name="button_setautoeventprop">Set Auto Event Prop</string>
    <string name="button_unsetchannel">Unset Channel</string>
    <string name="button_unsetall">Unset All</string>
    <string name="text_setsuperprop">Super Properties Setting</string>
    <string name="activity_display">Welcom</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_recycler">Recycler</string>
    <string name="title_listview">ListView</string>
    <string name="title_expandable">Expandable</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_webview">WebView Test</string>
    <string name="button_crash_test">Crash Test</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="dialog_message">用户名不能为空</string>
    <string name="dialog_title">Invalid Input</string>
    <string name="ok">OK</string>
    <string name="button_track_ad">Track ad event</string>
    <string name="button_track_pay">Track pay event</string>
    <string name="button_initialize">Initialize</string>
    <string name="button_flush">Flush</string>
    <string name="title_activity_click_test">ClickTestActivity</string>
    <string name="button_click">Click test</string>
    <string name="button_timepicker">Select Time</string>
    <string name="button_multichoice_dialog">Test MultiChoice Dialog</string>
    <string name="title_multi_choice">MultiChoice Dialog</string>
    <string name="button_user_set">User Set</string>
    <string name="button_user_set_once">User Set Once</string>
    <string name="button_user_increment">User Increment</string>
    <string name="button_user_number_max">User Number Max</string>
    <string name="button_user_number_min">User Number Min</string>
    <string name="button_user_append">User Append</string>
    <string name="button_user_uniq_append">User Uniq Append</string>
    <string name="button_user_unset">User Unset</string>
    <string name="button_user_delete">User Delete</string>
</resources>